# systemshock

./: .gitignore  CMakeLists.txt  COMPILING.md  README.md
.github/workflows/: main-build.yml
cmake/toolchains/: i686-gcc.cmake  i686-w64-mingw32.cmake  x86-64-gcc.cmake  x86-64-w64-mingw32.cmake
src/Libraries/EDMS/Source/: interfac.cc
src/Libraries/INPUT/Source/: sdl_events.c
src/MacSrc/: OpenGL.cc  Prefs.c  Shock.c
src/MusicSrc/: MusicDevice.c
